fix extra padding

--- a/sass/_github_markdown.scss
+++ b/sass/_github_markdown.scss
@@ -1,6 +1,6 @@
 body {
   font-family: Helvetica, arial, sans-serif;
-  padding-top: 40px;
+
   color: #333;
 }
 
